<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".Dashboard">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/tag_line"
        android:textColor="#000000"
        android:textSize="16sp" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardViewCreateSos"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            card_view:cardCornerRadius="15dp"
            card_view:cardElevation="5dp"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/redfinal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/createsosimg"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/create_list"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/pendingpickupsOrdersFigure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text=""
                        android:textSize="24sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <ImageView
                    android:id="@+id/createsosimg"
                    android:layout_width="70dp"
                    android:layout_height="45dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:elevation="10dp"
                    android:src="@drawable/create" />

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardViewViewSos"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            card_view:cardCornerRadius="15dp"
            card_view:cardElevation="5dp"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/mustardyellow">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/viewsosimg"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/view_list"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/processingOrdersFigure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text=" "
                        android:textSize="24sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <ImageView
                    android:id="@+id/viewsosimg"
                    android:layout_width="70dp"
                    android:layout_height="45dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:elevation="10dp"
                    android:src="@drawable/view" />


            </RelativeLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:id="@+id/cardViewCreateTrip"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            card_view:cardCornerRadius="15dp"
            card_view:cardElevation="5dp"
            card_view:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/greenfinal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/createtripimg"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/create_trip"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/pendingdeliveryFigure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text=""
                        android:textSize="24sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <ImageView
                    android:id="@+id/createtripimg"
                    android:layout_width="70dp"
                    android:layout_height="45dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:elevation="10dp"
                    android:src="@drawable/createtrip" />

            </RelativeLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardViewHistorySos"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:layout_marginTop="25dp"
            android:layout_weight="1"
            app:cardCornerRadius="15dp"
            app:cardElevation="5dp"
            app:cardUseCompatPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bluefinal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/viewtripimg"
                    android:layout_centerInParent="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/view_trips"
                        android:textAlignment="center"
                        android:textColor="#ffffff"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/scheduleOrdersFigure"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text=" "
                        android:textSize="24sp"
                        android:textStyle="bold" />


                </LinearLayout>

                <ImageView
                    android:id="@+id/viewtripimg"
                    android:layout_width="70dp"
                    android:layout_height="45dp"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="10dp"
                    android:elevation="10dp"
                    android:src="@drawable/history" />


            </RelativeLayout>


        </androidx.cardview.widget.CardView>


    </LinearLayout>

</LinearLayout>